# growtopia.js

./: .gitignore  .npmignore  Cargo.toml  LICENSE  README.md  binding.gyp  esm.mjs  index.d.ts  index.js  native.d.ts  native.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts  typedoc.json
.github/workflows/: CI.yml  node-windows.js.yml  node.js.yml
__test__/: index.spec.mjs  test.js
assets/ssl/: _wildcard.growserver.app-key.pem  _wildcard.growserver.app.pem
assets/website/: login.html
docs/: CNAME  hierarchy.html  index.html  modules.html
docs/assets/: hierarchy.js  highlight.css  navigation.js  search.js
docs/classes/: Client.html  GrowApi.html  Host.html  ItemsDat.html  Peer.html  TankPacket.html  TextPacket.html  Variant.html  src.Client.html  src.ItemsDat.html  src.Peer.html  src.TankPacket.html  src.TextPacket.html  src.Variant.html
docs/enums/: PacketTypes.html  TankTypes.html  TileActionTypes.html  TileCategoryFlags.html  TileExtraTypes.html  TileFlags.html  TileOptionsFlags.html  TilePropertiesFlags.html  VariantType.html  VariantTypes.html
docs/functions/: parseAction.html  parseText.html
docs/interfaces/: ActionEvent.html  Caching.html  ClientOptions.html  ClientType.html  DataObject.html  ENetServerOptions.html  ExtendString.html  HTTPSServerOptions.html  Tank.html  (+32 more)
install/: prebuild.js
lib/: binding.gyp  client.cc  client_peer.cc  index.ts  main.cc
src/: host.rs  index.ts  lib.rs  peer.rs
test/: basic.js  index.js
types/: client.d.ts  index.d.ts  items.d.ts  nanoevents.d.ts  packets.d.ts  peer.d.ts
(+86 files in other folders)
