[package]
edition = "2021"
name = "growtopia-js"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies.rusty_enet]
git = "https://github.com/StileDevs/rusty_enet.git"
rev = "b67cf73c9b00fb59b097938fa938dca2b2d9d521"
#path = "D:\\Projects\\NodeJS_Projects\\StileDevs\\rusty_enet"

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
